2008-07-01  Neal H. Walfield  <neal@gnu.org>

	* server.c (server_loop): In the cap_rubout implementation,
	shootdown TARGET.

2008-07-01  Neal H. Walfield  <neal@gnu.org>

	* object.h (object_desc_to_cap): Correctly set the subpage
	specification.

2008-07-01  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (viengoos_LDADD): Also add
	../libhurd-mm/libas-kernel.a before libc-kernel.a.

2008-06-30  Neal H. Walfield  <neal@gnu.org>

	* cap.c (cap_shootdown): Iterate over all capabilities in a
	cappage and all elements in a folio, not just the first log2 of
	them.

2008-06-29  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (all-local): New target.
	(viengoos.striped): Likewise.

2008-06-29  Neal H. Walfield  <neal@gnu.org>

	* thread.c: Include <hurd/trace.h>.
	(thread_exregs): Improve debugging output.
	(thread_raise_exception): Likewise.

2008-06-29  Neal H. Walfield  <neal@gnu.org>

	* activity.c (activity_destroy): After printing the profile data,
	print the enabled debugging options.
	
	(do_activity_dump): Also print how many free allocations the
	activity has, its karma and the number of excluded frames.

2008-06-28  Neal H. Walfield  <neal@gnu.org>

	* server.c (server_loop): Fix debug statement.

2008-06-27  Neal H. Walfield  <neal@gnu.org>

	* activity.h (struct activity): Add fields free_bad_karma,
	free_goal, free_allocations and free_initial_allocation.
	* rm.h (rm_method_id_string): Replace RM_activity_stats handling
	with RM_activity_info handling.
	* thread.h (THREAD_WAIT_STATS): Remove.
	(THREAD_WAIT_ACTIVITY_INFO): Replace with this.
	(struct thread): Add field wait_reason_arg2.
	* ager.c (update_stats): Account for local pressure when
	calculating availability.  Don't use activity_stats to inform
	threads of new statistics but activity_info.
	* object.c (object_desc_claim): Adjust the activity's FREE_GOAL,
	FREE_ALLOCATIONS, and FRAMES_EXCLUDED fields as appropriate.
	* pager.c (pager_collect): When selecting a victim, don't include